# todoro

./: .gitignore  CMakeLists.txt  Dockerfile
qml/: Main.qml
src/: main.cpp
